--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,9 +1,10 @@
+<body class="events-page">
 <%= render 'events/nav_bar' %>
 
 <!-- Events Listing Container-->
 <div class="container-fluid content">
 	<div class="row row_filter">
-		<div class="column col-xs-12 text-center" style="padding:0px">
+		<div class="column col-xs-12 text-center filters_column">
 			<div class="btn-group">
 				<div class="btn-group">
 
