--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,11 @@
+<body class="welcomepage">
+
 <div id="welcomeBackground">
   <div class="overlay">
     <div class="welcomeLogo">
     </div>         
 
 	<!-- Sign Up Button -->
-	 <%= link_to 'Discover Events', users_new_path, class: 'ctaSignUp' %>
+	 <%= link_to 'Discover Events', users_new_path, class: 'discover' %>
   </div>
 </div> 
