--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -1,127 +1,9 @@
-<style>
-
-  #close {
-    width: 50%;
-    margin: 0 auto;
-    margin-bottom: 10px;
-  }
-
-  .instructions {
-    text-align: center;
-    margin: 15px;
-    width: 38%;
-    display: inline-block;
-    font-weight: 500;
-  }
-
-  .modal-backdrop {
-    background-color: rgba(0,0,0,0.8) !important;
-  }
-
-  .row_events {
-    border-top: 1px solid #ccc;
-    height: 70px;
-    padding-top: 20px;
-    padding-bottom: 0px;
-    position: relative;
-  }
-
-  .event_header {
-    font-size: 1em;
-    overflow: visible;
-    /*white-space: nowrap;*/
-  }
-
-  .event_date {
-    font-size: .70em;
-    font-weight: 500;
-  }
-
-  .location {
-    font-size: .70em;
-    font-weight: 500;
-  }
-
-  .event_photo_index {
-    max-height: 90px;
-    max-width: 60px;
-    padding-top: 15px;
-    pointer-events: none;
-  }
-
-  ul#col1 {
-    /*background-color: red;*/
-    list-style-type: none;
-  }
-
-  ul#col2 {
-    /*background-color: blue;*/
-    height: 70px;
-    list-style-type: none;
-  }
-
-  #column2 {
-    margin-top: 0px;
-    padding-left: 0px;
-    /*padding-right: 0px;*/
-  }
-
-  #column2 > img {
-    height: 60px;
-
-  }
-
-  #column1 {
-    padding-right: 0px;
-  }
-
-  .btn.btn-default {
-    margin: 0 auto;
-    display: block;
-    width: auto !important;
-  }
-
-/*jquery mobile test*/
-  html, body { padding: 0; margin: 0; }
-  html, .ui-mobile, .ui-mobile body {
-    height: 105px;
-  }
-  .ui-mobile, .ui-mobile .ui-page {
-    min-height: 105px;
-  }
-
-  div.box {
-    width: 30em;
-    height: 3em;
-    background-color: #108040;
-  }
-  
-  div.event_wrapper.swipeleft {
-    background-color: rgb(238, 103, 89) !important;
-  }
-
-  div.box.swipeleft {
-    background-color: #7ACEF4;
-  }
-
-  div.event_wrapper.swiperight {
-    background-color: rgb(255, 194, 137) !important;
-  }
-
-  .ui-content {
-    padding-left: 5px;
-    padding-right: 5px;
-  }
-
-</style>
-
-
 <div data-role="main" class="container-fluid content ui-content">
   <% @events.each do |event| %>
   <div class="event_wrapper <%=event.id%>">
      <div class="row row_events">
       <div class="col-md-6 col-sm-6 col-xs-10" id="column1">
-        <ul id="col1" style="padding-left: 0px">
+        <ul id="col1">
           <li class="event_header">
           <%= link_to event.name, event_path(event) %>
 
@@ -144,7 +26,7 @@
     
     <div class="row">
       <div class="col-md-6 col-sm-6 col-xs-6">
-        <ul>
+        <!-- <ul> -->
 <!--           <li class="location"><%#= truncate(event.venue, length: 25) %> <%#= truncate(event.city, length: 15) %></li>
           <li class="event_date"><%#= date_converter(event.date) %>
            <%#= event.event_date.strftime('%a, %b %d, %Y - %l:%M %p') %></li>
