--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,22 @@
+<h2>Sign up</h2>
+
+<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+  <%= devise_error_messages! %>
+
+  <div class="field"><%= f.label :email %><br />
+  <%= f.email_field :email %></div>
+
+  <div class="field"><%= f.label :password %><br />
+  <%= f.password_field :password %></div>
+
+  <div class="field"><%= f.label :password_confirmation %><br />
+  <%= f.password_field :password_confirmation %></div>
+
+  <div class="field"><%= f.submit "Sign up" %></div>
+<% end %>
+
+<%= render "devise/shared/links" %>
+
 <div class="signUpScreen"> 
   <div class="authHeader">
     <h5>Immediately filter through thousands of events to create your personalized list.</h5>
