meetup login broken

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -75,8 +75,11 @@ input[type="submit"] {
   <div class="settings-email-label"><%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
 
-  <div class="settings-email-label"><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %></div><br>
+    <% if f.object.encrypted_password.present? %>
+  <div class="field"><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+  <%= f.password_field :current_password %></div>
+<% end %>
+
 
   <div id="interestContainer"><h3><%= f.label :categories %></h3><br />
     
