--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,8 @@
       <%= link_to "Logout", destroy_user_session_path, method: :delete %>
     <% else %>
       <%= link_to "Sign up", new_user_registration_path %> |
-      <%= link_to "Login", new_user_session_path %>
+      <%= link_to "Login", new_user_session_path %> |
+      <%= link_to "Sign in with Meetup", user_omniauth_authorize_path(:meetup) %>
     <% end %>
   </div>
 <% flash.each do |name, msg| -%>
