--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,13 +4,15 @@
   <%= devise_error_messages! %>
 
   <div class="field"><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
+  <%= f.email_field :email %></div> 
 
-  <div class="field"><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+  <% if f.object.password_required? %>
+    <div class="field"><%= f.label :password %><br />
+    <%= f.password_field :password %></div>
 
-  <div class="field"><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+    <div class="field"><%= f.label :password_confirmation %><br />
+    <%= f.password_field :password_confirmation %></div>
+  <% end %>
 
   <div class="field"><%= f.submit "Sign up" %></div>
 <% end %>
