user can update their organizer status

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -66,7 +66,7 @@ input[type="submit"] {
   <%= f.email_field :email, autofocus: true %></div>
 
   <div class="field"><%= f.label :meetup_organizer %><br />
-    <%= f.text_field :meetup_organizer %></div>
+    <%= f.check_box :meetup_organizer %></div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
