Change select interest copy

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <div class="signUpScreen"> 
 
   <%= form_for :user do |f| %>
-    <div class="interestHeader"><%= f.label :categories %>
+    <div class="interestHeader">Select Categories
     </div>
     <div class="interest-container">
       <div class="row">
