--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -158,7 +158,10 @@ h5 {
   width: 100%;
   height: auto;
   padding: 10px;
+  padding-left: 20px;
   background-color: rgb(200,200,200);
+  font-weight: bold;
+  text-align: left;
 }
 
 .interestBox {
