--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -16,25 +16,21 @@ body {
   font-family: 'Lato', sans-serif !important;
 }
 
-body.welcomepage {
+
   .container-fluid {
     padding: 0px 0px;
   }
 
   #welcomeBackground {
     background-image: url(http://tonybradleyphotography.files.wordpress.com/2012/09/img_90161.jpg);
+    background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
     min-height: 100vh;
-    max-height: 1000px;
-    background-size: 110% auto;
   }
   @media only screen and (max-width: 540px) {
     #welcomeBackground {
-      width: 400px;
-      max-height: 90%;
-      background-position-x: -125px;
-      background-size: 200% auto;
+      background-position-x: -135px;
     }
   }
 
@@ -46,6 +42,16 @@ body.welcomepage {
     height: 100%;
     z-index: 10;
     @include linearGradient(rgba(0,0,0,.1), rgba(0,0,0,1));
+  }
+
+  .overlay2 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    @include linearGradient(rgba(0,0,0,.3), rgba(0,0,0,1));
   }
 
   .welcomeLogo {
@@ -85,4 +91,3 @@ body.welcomepage {
   a.discover:hover {
     text-decoration: none;
   }
-}
